Atkinson Hyperlegible and correct Horizon palette

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root {
-  --background: rgb(237, 224, 224);
-  --foreground: rgb(90, 82, 74);
-  --accent: rgb(237, 97, 55);
+  --background: #fdf0ed;
+  --foreground: #1c1e26;
+  --accent: #F6661E;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: rgb(60, 51, 42);
-    --foreground: rgb(237, 224, 224);
+    --background: #1c1e26;
+    --foreground: #fdf0ed;
   }
 }
 
@@ -15,10 +15,11 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-size: 1em;
-  font-family: 'Sometype Mono', sans-serif;
+  font-family: 'Atkinson Hyperlegible Next', sans-serif;
+  font-weight: 400;
   line-height: 1.25;
   margin: 5vh 5vw;
-  max-width: 28em;
+  max-width: 24em;
 }
 
 img.logo {
@@ -46,10 +47,10 @@ h2 {
 }
 
 p {
-  text-indent: -1em;
+  text-indent: -0.5em;
   margin-bottom: 1em;
   margin-top: 0;
-  padding-left: 1em;
+  padding-left: 0.5em;
 }
 
 ul {
